Updated the mobile version of the demo page

--- a/example/index.css
+++ b/example/index.css
@@ -173,7 +173,7 @@
             width: 90vw;
             justify-content: space-between;
         }
-        pre, select {
+        pre, select, .zoomDiv {
             display: none;
         }
         .innerDiv {
