--- a/example/index.css
+++ b/example/index.css
@@ -228,4 +228,8 @@
             height: 10vmin;
             margin: 80px !important;
         }
+
+        .gitLink {
+            display: none;
+        }
     }
