--- a/example/index.css
+++ b/example/index.css
@@ -177,10 +177,10 @@
         margin: 0;
     }
 
-    /* input[type=number] {
+    input[type=number] {
         appearance: textfield;
         -moz-appearance: textfield;
-    } */
+    }
 
     @media screen and (max-width: 900px) {
         h1 {
