--- a/example/index.css
+++ b/example/index.css
@@ -178,7 +178,8 @@
     }
 
     input[type=number] {
-        appearance: textfield;
+        appearance: none;
+        -webkit-appearance: none;
         -moz-appearance: textfield;
     }
 
